tests/ui/rfcs/rfc-2632-const-trait-impl/default-method-body-is-const-same-trait-ck.stderr
error[E0277]: the trait bound `(): ~const Tr` is not satisfied
  --> $DIR/default-method-body-is-const-same-trait-ck.rs:10:12
   |
LL |         ().a()
   |            ^ the trait `Tr` is not implemented for `()`
   |
note: required by a bound in `Tr::a`
  --> $DIR/default-method-body-is-const-same-trait-ck.rs:5:1
   |
LL | #[const_trait]
   | ^^^^^^^^^^^^^^ required by this bound in `Tr::a`
LL | pub trait Tr {
LL |     fn a(&self) {}
   |        - required by a bound in this associated function
help: consider introducing a `where` clause, but there might be an alternative better way to express this requirement
   |
LL | pub trait Tr where (): Tr {
   |              ++++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
